# system_foundation_rust

./: Cargo.toml
communication/: Cargo.toml
communication/src/parcel/: mod.rs  parcel_error_type.rs
core/src/: lib.rs
core/src/enums/: endian.rs
core/src/graph/: edge.rs  graph.rs
core/src/numerics/: vector2d.rs  vector2i.rs  vector3i.rs
evolutionary_operation/: Cargo.toml
evolutionary_operation/src/genetic_algorithm/: chromosome.rs  mod.rs
evolutionary_operation/src/genetic_algorithm/traits/: crossover.rs  evaluation.rs  genetic_algorithm.rs  mod.rs  mutation.rs  selection.rs
examples/: geometry.rs  grid_map_conversion.rs  topology.rs
map/src/io/: grid_map_exporter.rs  topology_map_exporter.rs
math/src/geometry/: geometry_solver.rs
robotics/: Cargo.toml
src/: lib.rs
src/algorithms/: mod.rs
src/algorithms/convex_hull/: convex_hull_algorithm.rs
src/algorithms/topology_extraction/: mod.rs  topology_edge.rs  topology_extractor.rs  topology_node.rs  topology_node_type.rs
src/algorithms/zhang_suen_thinning/: mod.rs  zhang_suen_thinning_algorithm.rs
src/graph/: edge.rs  graph.rs  graph_error.rs  mod.rs  node.rs
src/map/: mod.rs
src/map/grid/: grid_map.rs
src/map/io/: mod.rs  topology_map_exporter.rs
src/map/topology/: mod.rs
src/math/: mod.rs
src/math/geometry/: geometry_solver.rs  mod.rs
src/math/numerics/: vector2d.rs  vector3d.rs
src/numerics/: mod.rs  vector.rs  vector2d.rs  vector2i.rs  vector3d.rs  vector3i.rs
src/peripherals/: mod.rs
src/peripherals/parcel/: parcel.rs
src/topology_extraction/: mod.rs  topology_edge.rs  topology_extractor.rs  topology_node.rs
src/topology_generation/: mod.rs  topology_edge.rs  topology_generator.rs  topology_node.rs  waypoint_simplifier.rs
(+8 files in other folders)
