[package]
name = "system_foundation_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"

[features]
parcel = []
graph = []
topology_extraction = ["zhang_suen_thinning"]
zhang_suen_thinning = []