[package]
name = "system_foundation_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.2"
imageproc = "0.25.0"
ndarray = "0.15.6"

[features]
parcel = []
graph = []
topology_extraction = ["zhang_suen_thinning", "graph"]
zhang_suen_thinning = []
map = ["graph"]
